<resources>
    <string name="app_name">FINDING</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="mapbox_access_token">sk.eyJ1Ijoic2FydW1haGExOTEyIiwiYSI6ImNsamV2MmY1NzAwbXQzbHA0cTRldHp4dnoifQ.Q9OQI7he3UBF0cbRJtBd6w</string>
    <string name="place_autocomplete_query_hint">Search for places</string>
    <string name="place_autocomplete_reverse_geocoding_error_message">Unable to locate selected coordinate</string>
    <string name="place_autocomplete_selection_error">Error happened during request</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_feed">Feed</string>
    <string name="akun">Akun</string>
    <string name="favorite">Favorite</string>
    <string name="selamat_datang">SELAMAT DATANG</string>
    <string name="masuk">MASUK</string>
    <string name="example_gmail_com">Example@gmail.com</string>
    <string name="kata_sandi">Kata sandi</string>
    <string name="informasi_lainya">Informasi lainya :</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="hallo">HALLO!!</string>
    <string name="login_form">LOGIN FORM</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="register_form">REGISTER FORM</string>
    <string name="daftar_req">DAFTAR</string>
    <string name="nama_pengguna">Nama pengguna</string>
    <string name="_8890">8890****</string>
    <string name="konfirmasi_sandi">Konfirmasi sandi</string>
    <string name="kota">Kota</string>
    <string name="dengan_mendaftar_anda_telah_menyetujui">Dengan mendaftar Anda telah menyetujui</string>
    <string name="syarat_dan_ketentuan_yang_berlaku">syarat dan ketentuan yang berlaku</string>
    <string name="daftarkan_tempat">Daftarkan Tempat</string>
    <string name="hs">HS</string>
    <string name="_62">+62 |</string>
    <string name="ubah_profil_akun">Ubah profil akun</string>
    <string name="ubah_kata_sandi">Ubah kata sandi</string>
    <string name="scan">Scan</string>
    <string name="riwayat_ulasan">Riwayat ulasan</string>
    <string name="bantuan">Bantuan</string>
    <string name="logout">LOGOUT</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="undang_teman">Undang teman</string>
    <string name="simpan">SIMPAN</string>
    <string name="insial">HS</string>
    <string name="finding_version_1_0">Finding Version 1.0</string>
    <string name="finding">FINDING</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="tempat_baru">Tempat Baru</string>
    <string name="semua">Lihat Semua</string>
    <string name="tidak_ada_data">Tidak ada data</string>
    <string name="_5_0_terjual_1_1k">5.0 | Pengunjung 0</string>
    <string name="example_alamat">Jln. Setia budi</string>
    <string name="restoran">Restoran</string>
    <string name="nama_tempat">Nama Tempat</string>
    <string name="kamu_punya_kendala">Kamu Punya Kendala?</string>
    <string name="kamu_bisa_hubungi_tim">Kamu bisa hubungi tim</string>
    <string name="kota_anda_saat_ini_di">Kota anda saat ini di </string>
    <string name="medan">Medan</string>
    <string name="saat_ini_di">saat ini di</string>
    <string name="hengki">Hengki</string>
    <string name="lokasi">Lokasi</string>
    <string name="costumer_service_finding">Costumer Service FINDING</string>
    <string name="foto_tempat">Foto Tempat</string>
    <string name="kalikali">*</string>
    <string name="tambah_foto">Tambah Foto</string>
    <string name="detail_alamat">Detail Alamat</string>
    <string name="alamat_tempat">Alamat Tempat</string>
    <string name="provinsi">Provinsi</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="jam_operasional">Jam Operasional</string>
    <string name="buka">Buka</string>
    <string name="tutup">Tutup</string>
    <string name="time">00.00</string>
    <string name="kategori_tempat">Kategori Tempat</string>
    <string name="deskripsi_tempat">Deskripsi Tempat</string>
    <string name="bukti_kepemilikan">Bukti Kepemilikan</string>
    <string name="ketentuan_bukti_kepemilikan">Ketentuan Bukti Kepemilikan</string>
    <string name="lanjut">Lanjut</string>
    <string name="nama_yang_di_pilih_tidak_dapat_diubah">Nama yang di pilih tidak dapat diubah</string>
    <string name="aktifitas">Aktivitas</string>
    <string name="ulasan">Ulasan</string>
    <string name="cek_qr_code">Cek QR Code</string>
    <string name="bagikan_tempat">Bagikan Tempat</string>
    <string name="semua_kategori">Semua Kategori</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="fasilitas_tempat">Fasilitas Tempat</string>
    <string name="menu_produk">Menu Produk</string>
    <string name="kebijakan">Kebijakan</string>
    <string name="kategori">Kategori</string>
    <string name="foto_di_lokasi">Foto Di Lokasi</string>
    <string name="lokasi_detail">Jln, kenangan denagn mantan, Kec, Kembangan, kota jakarta Barat, Jakarta</string>
    <string name="label">Label</string>
    <string name="edit_lokasi">Edit Lokasi</string>
    <string name="pilih_alamat">Pilih Alamat</string>
    <string name="tambah_alamat">+ Tambah Alamat</string>
    <string name="pengaturan_lainnya">Pengaturan Lainnya</string>
    <string name="hapus_tempat">Hapus Tempat</string>
    <string name="atur_lokasi_toko_mu">Atur lokasi toko mu</string>
    <string name="contoh_rumah_kantor_dan_lainya">Contoh: Rumah, Kantor dan Lainya</string>
    <string name="label_lokasi">Label Lokasi</string>
    <string name="contoh_detail_lokasi">Contoh: Jln, kenangan denagn mantan, Kec, Kembangan, kota jakarta Barat, Jakarta</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="simpan_alamat">Simpan Alamat</string>
    <string name="nama_menu">Nama Menu</string>
    <string name="rp_10_000">Rp 10,000</string>
    <string name="tambah_produk">+ Tambah Produk</string>
    <string name="add_product">Tambah Produk</string>
    <string name="deskripsi_product">Kolom ini berisi info terkait produk yang ditambahkan dalam database aplikasi</string>
    <string name="kategori_produk">Kategori Produk</string>
    <string name="foto_produk">Foto Produk</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="harga">Harga</string>
    <string name="qty">QTY:</string>
    <string name="_0">0</string>
    <string name="jumlah">Jumlah</string>
    <string name="kategori_fasilitas">Kategori Fasilitas</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="nama_category">Nama Category</string>
    <string name="tambah_kategori">Tambah Kategori</string>
    <string name="gambar_kategori">Gambar Kategori</string>
    <string name="nama_kategori">Nama Kategori</string>
    <string name="deskripsi_kategori">Deskripsi Kategori</string>
    <string name="categoryfasilitas">Kategori Fasilitas</string>
    <string name="kategori_tempatdua">Kategori Tempat</string>
    <string name="kategori_menu_produk">Kategori Menu Produk</string>
    <string name="pengaturan_kategori">Pengaturan Kategori</string>
    <string name="_5_0">5.0</string>
    <string name="pengunjung">| Pengunjung |</string>
    <string name="_00">0</string>
    <string name="category">Category</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="slider">Slider</string>
    <string name="nama_slider">Nama Slider</string>
    <string name="cari_tempat_di_finding">Cari Tempat di Finding</string>
    <string name="_08_00_21_00">08:00 - 21:00</string>
    <string name="rute">Rute</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="info_deskripsi">Info Deskripsi</string>
    <string name="detail_tempat">Detail Tempat</string>
    <string name="produk_tempat">Produk Tempat</string>
    <string name="tempat_terkait">Tempat Terkait</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="hasil_scan">Hasil Scan</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="tips">Tips</string>
    <string name="pilih_lokasi_tempatmu">Pilih Lokasi Tempatmu</string>
    <string name="kenyamanan">Kenyamanan</string>
    <string name="kebersihan">Kebersihan</string>
    <string name="pelayanan">Pelayanan</string>
    <string name="lokasii">Lokasi</string>
    <string name="lokasi_awal">Lokasi Awal</string>
    <string name="lokasi_tujuan">Lokasi Tujuan</string>
    <string name="tampilkan_rute">Tampilkan Rute</string>
    <string name="terbaru">Terbaru</string>
    <string name="_5_0_berkunjung_0">5.0 | Berkunjung: 0</string>
    <string name="pengguna_jarang">Pengguna Jarang</string>
    <string name="sering_berkunjung">Sering Berkunjung</string>
    <string name="jarang_berkunjung">Jarang Berkunjung</string>
    <string name="favorit">Favorit</string>
    <string name="favorit_saya">Favorit Saya</string>
    <string name="catatan">Catatan</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="lihat_semua_ulasan">Lihat Semua Ulasan</string>
    <string name="lihat_lainnya">Lihat Lainnya</string>
    <string name="permissions_denied" />
    <string name="info" />
    <string name="dismiss" />
    <string name="ubah_style">Ubah style</string>
    <string name="mulai_navigasi">Mulai Navigasi</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="konfirmasi_tempat">Konfirmasi Tempat</string>
    <string name="history">History</string>
    <string name="confirm">Confirm</string>
    <string name="ayo_cari_tempat">Ayo Cari Tempat</string>
    <string name="jumlah_total">Jumlah Total</string>
    <string name="status">Status</string>
    <string name="sudah_bayar">Sudah Bayar</string>
    <string name="harga_total">Harga Total</string>
    <string name="_50">50</string>
    <string name="lanjutkan_pesanan">Lanjutkan Pesanan</string>
    <string name="konfirmasi_bayar">Konfirmasi Bayar</string>
    <string name="transaksi">Transaksi</string>
    <string name="tambah_fasilitas">Tambah Fasilitas</string>
    <string name="simpan_ke_galeri">Simpan Ke Galeri</string>
    <string name="nama_fasilitas">Nama Fasilitas</string>
    <string name="deskripsi_fasiltas">Deskripsi Fasiltas</string>
    <string name="account">Account</string>
    <string name="order">Order</string>
    <string name="umur">Umur</string>
    <string name="seusia_mu">Seusia-mu</string>
    <string name="tanggal">0000-00-00</string>
    <string name="format_tgl">Tips: Masukan tanggal lahir sesuai dengan format tahun-bulan-tanggal</string>
</resources>