<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.inyonghengki.findinglocation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.inyonghengki.findinglocation.ui.akuns.AkunsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_akuns" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.inyonghengki.findinglocation.ui.favorites.FavoritesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_feedback"
        android:name="com.inyonghengki.findinglocation.ui.feedback.FeedbackFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feedback" />

</navigation>