<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lymain"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_3sdp"
    android:layout_marginVertical="@dimen/_8sdp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_15sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:paddingBottom="@dimen/_5sdp"
                android:textAppearance="@style/TypographyStyles.Text2" />

            <ImageView
                android:id="@+id/btn_menu"
                style="@style/image_clickable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/baseline_delete"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_namatempat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_tempat"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            android:paddingBottom="@dimen/_5sdp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_kota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kota"
            android:textAppearance="@style/TypographyStyles.Text2" />

        <TextView
            android:id="@+id/tv_alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/lokasi_detail"
            android:textAppearance="@style/TypographyStyles.Text3" />

        <TextView
            android:id="@+id/tv_kodepos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kode_pos"
            android:layout_marginTop="@dimen/_8sdp"
            android:textAppearance="@style/TypographyStyles.Text2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/_10sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_call"
            android:drawablePadding="@dimen/_7sdp"
            android:gravity="center_vertical"
            android:text="@string/_8890"
            android:textAppearance="@style/TypographyStyles.Text3"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/_5sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/_7sdp"
            android:gravity="center_vertical"
            android:text="@string/example_gmail_com"
            android:textAppearance="@style/TypographyStyles.Text3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/_5sdp" />

        <RelativeLayout
            android:id="@+id/btn_ubahalamattoko"
            style="@style/layout_clickable"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_28sdp"
            android:background="@drawable/bg_penambahan_white">

            <TextView
                android:id="@+id/btn_beli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/edit_lokasi"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>