<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_2sdp"
    android:layout_marginVertical="@dimen/_2sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_8sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="vertical">

        <RelativeLayout
            style="@style/layout_clickable"
            android:id="@+id/ry_viewdetailproduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_2sdp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_namauser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/nama_pengguna"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_tgl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/tanggal"
                android:textSize="@dimen/_14ssp"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="#ECECEC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/jumlah_total"
                android:textSize="@dimen/_14ssp"/>

            <TextView
                android:id="@+id/tv_sumqty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_78sdp"
                android:text="@string/_50"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="#ECECEC"
            android:layout_marginStart="@dimen/_20sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_18sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/harga_total"
                android:textSize="@dimen/_14ssp"/>

            <TextView
                android:id="@+id/tv_sumprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_88sdp"
                android:text="@string/rp_10_000"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="#ECECEC"
            android:layout_marginStart="@dimen/_20sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_18sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/status"
                android:textSize="@dimen/_14ssp"/>

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_120sdp"
                android:text="@string/sudah_bayar"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="#ECECEC" />

        <RelativeLayout
            android:id="@+id/btn_konfir"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/bg_penambahan">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/konfirmasi_bayar"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>